# pydantic-model-example

./: Justfile  README.md  pyproject.toml
src/pydantic_model_example/: __init__.py
tests/: example_file.py  test_main.py
