[project]
name = "pydantic-model-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
requires-python = ">=3.10"
dependencies = [
    "polyfactory>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
pydantic-model-example = "pydantic_model_example:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "community-of-python-flake8-plugin",
    "flake8-pyproject",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]
