[project]
name = "pydantic-model-example"
version = "0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
requires-python = ">=3.10"
dependencies = [
    "polyfactory>=3",
    "pydantic>=2.10",
    "pydantic-settings>=2.10",
]

[project.scripts]
pydantic-model-example = "pydantic_model_example:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "auto-typing-final",
    "community-of-python-flake8-plugin",
    "flake8-pyproject",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
external = ["COP"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.mypy]
strict = true

[tool.flake8]
select = ["COP"]
exclude = [".venv", ".cache"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
